messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-app
    version: blue   # Switch this to 'green' when deploying green
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
