messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: django.local   # you can map this in /etc/hosts
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: django-messaging-app   # must match your Service name
                port:
                  number: 8000               # must match your Service port
